--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "ts-pack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": ">=6.10"
+  },
+  "bin": {
+    "ts-pack": "bin/cmd.js"
+  },
+  "main": "bin/cmd.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.14.1",
+    "global-modules": "^1.0.0",
     "webpack": "^4.0.1",
     "webpack-dev-server": "^3.1.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^4.0.0",
+    "typescript": "^2.7.2"
   }
 }
