--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^8.0.0",
     "commander": "^2.14.1",
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.10",
     "global-modules": "^1.0.0",
+    "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-loader": "^2.1.1",
+    "style-loader": "^0.20.2",
+    "ts-loader": "^4.0.0",
+    "typescript": "^2.7.2",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.0.1",
     "webpack-dev-server": "^3.1.0"
-  },
-  "devDependencies": {
-    "ts-loader": "^4.0.0",
-    "typescript": "^2.7.2"
   }
 }
