--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^8.0.0",
+    "base-64": "^0.1.0",
+    "body-parser": "^1.18.2",
     "commander": "^2.14.1",
     "css-loader": "^0.28.10",
+    "express": "^4.16.2",
+    "express-logging": "^1.1.1",
     "file-loader": "^1.1.10",
     "global-modules": "^1.0.0",
     "postcss-flexbugs-fixes": "^3.3.0",
@@ -29,11 +33,8 @@
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "typescript": "^2.7.2",
     "typings-for-css-modules-loader": "^1.7.0",
+    "uglifyjs-webpack-plugin": "^1.2.3",
     "webpack": "^4.0.1",
-    "base-64": "^0.1.0",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "express-logging": "^1.1.1",
     "webpack-dev-server": "^3.1.0"
   }
 }
