--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-logging": "^1.1.1",
     "file-loader": "^1.1.10",
     "global-modules": "^1.0.0",
+    "json-loader": "^0.5.7",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.1",
     "raw-loader": "^0.5.1",
@@ -35,6 +36,7 @@
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.2.3",
     "webpack": "^4.0.1",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
